--- a/front_end/package.json
+++ b/front_end/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
-    "jquery": "^3.4.1",
     "bootstrap": "^4.3.1",
-    "popper.js": "^1.15.0"
+    "core-js": "^3.3.2",
+    "echarts": "^4.4.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
